--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "psql": "0.0.1",
     "sequelize": "^3.30.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
