Create database and migrate

--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
-    "username": "postgres",
+    "username": "kaioo",
     "password": null,
     "database": "geo_arg_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "postgres",
+    "username": "kaioo",
     "password": null,
     "database": "geo_arg_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
+    "username": "kaioo",
     "password": null,
     "database": "geo_arg_production",
     "host": "127.0.0.1",
