--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "postgres",
-    "password": null,
+    "username": "admin",
+    "password": "password",
     "database": "geo_arg_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "postgres",
-    "password": null,
+    "username": "admin",
+    "password": "password",
     "database": "geo_arg_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": null,
+    "username": "admin",
+    "password": "password",
     "database": "geo_arg_production",
     "host": "127.0.0.1",
     "dialect": "postgres"
