--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "prestart": "./node_modules/.bin/sequelize db:migrate && ./node_modules/.bin/sequelize db:seed:all",
     "dev": "nodemon ./bin/www",
-    "test": "mocha"
+    "test": "mocha */*.test.js"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
