--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "^6.1.4",
     "psql": "0.0.1",
     "sequelize": "^3.30.2",
+    "sequelize-cli": "^2.6.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
