--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "mocha": "^3.2.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.4",
     "psql": "0.0.1",
