Edit travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ script:
   - npm test
 notifications:
   email: false
-env:
-  - NODE_ENV=production
+production:
+  adapter: postgresql
+  database: geo_arg_development
