Edit config js and travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,5 @@ script:
   - npm test
 notifications:
   email: false
-production:
-  adapter: postgresql
-  database: geo_arg_development
+env:
+  - NODE_ENV=production
